{{$NEXT}}

0.16      2012-02-11 22:11:08 Europe/London

0.15      2012-02-11 14:01:46 Europe/London

0.14      2012-01-28 17:37:00 Europe/London
    - Support for a different build process
    - Fixed a documentation fault.
    - Defaults to using Metacpan rather than search.cpan

0.13      2011-06-06 15:09:35 Europe/London

0.12      2011-04-15 10:38:21 Europe/London
    - Now uses OurPkgVersion (requires source modules change)
    - Authority insert is now done at comment position
    - 2 changes above require a # VERSION and # AUTHORITY comments
      to be inserted into your modules.
    - Change to ModuleBuild instead of MakeMaker

0.11      2011-02-18 11:00:51 Europe/London
    - Fixed CommitBuild release messages
    - Slightly improved docs
    - No longer produces CommitBuilds for every build...
    - Now uses [Bootstrap::lib] to reduce the build dance
    - Got README handling as I want it, finally
    - Realised that Changes handling is now wrong - needs fixing later

0.07      2011-02-11 13:22:07 Europe/London
    - Made [Git::CommitBuild] push to a cpan branch
    - Removed the [CopyReadmeFromBuild] due to issues

0.06      2011-02-11 13:05:57 Europe/London
    - Added [CopyReadmeFromBuild]
    - Added [Git::CommitBuild]
    - Made pod coverage and no tabs tests optional

0.05      2011-02-10 13:43:53 Europe/London
    - Rehased based on MARCEL bundle
    - Better POD weaving

0.04      2011-02-07 13:17:32 Europe/London
    - Fixed stupid mistake where managed to put FLORAs info back in
    - And similarly for the rafl github user...
    - Minor doc updates.

0.03      2011-02-05 22:34:01 Europe/London
    - Now uses AutoPrereqs instead of deprecated AutoPrereq
    - Uses Git::NextRelease module, with appropriate regex

0.02      2011-02-05 16:27:58 Europe/London
    - Moved to use itself for release

0.01      2011-02-05 16:21:31 Europe/London
    - Initial construction of module